# magicka-save-editor

./: .gitignore  Cargo.toml  README.md
src/: _app.rs  app.rs  lib.rs  main.rs
src/save/: internal.rs  items.rs  mod.rs
