[package]
name = "magicka-save-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
confy = "0.5.1"
convert_case = "0.6.0"
eframe = "0.20.1"
egui = "0.20.1"
eyre = "0.6.8"
iced = "0.8.0"
rfd = "0.10.0"
serde = { version = "1.0.151", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.37"
